fixed checkstyle warnings for statistics package